--- a/lang/zh.json
+++ b/lang/zh.json
@@ -1,1 +1,13 @@
-{"0":"正在运行中","1":"示例数据","3":"欢迎使用自动国际化插件","4":"这是一个测试页面","5":"点击测试","6":"当前状态：","7":"测试数据："}
+{
+  "i18n_e6ada3e59ca8e8bf90e8a18ce4b8ad": "正在运行中",
+  "i18n_e7a4bae4be8be695b0e68dae": "示例数据",
+  "i18n_e782b9e587bbe4ba86e4b880e4b8aae68c89e992ae": "点击了一个按钮",
+  "i18n_e8bf99e698afe4b880e4b8aae6b58be8af95e9a1b5e99da2": "这是一个测试页面",
+  "i18n_e782b9e587bbe6b58be8af95": "点击测试",
+  "i18n_e58887e68da2e8afade8a880": "切换语言",
+  "i18n_e5bd93e5898de78ab6e68081efbc9a": "当前状态：",
+  "i18n_e6b58be8af95e695b0e68daeefbc9a": "测试数据：",
+  "i18n_e6aca2e8bf8ee4bdbfe794a8e887aae58aa8e59bbde99985e58c96e68f92e4bbb6": "欢迎使用自动国际化插件",
+  "i18n_e5bd93e5898de78ab6e68081efbc9ae6ada3e59ca8e8bf90e8a18ce4b8ad": "当前状态：正在运行中",
+  "i18n_e6b58be8af95e695b0e68daeefbc9ae7a4bae4be8be695b0e68dae": "测试数据：示例数据"
+}
